--- a/hover立体.html/folor.html
+++ b/hover立体.html/folor.html
@@ -36,6 +36,7 @@
         <img src="img.jpg" alt="" width="400px" height="400px" class="img"/>
     </div>
     <h1 style="color: red;">被添加</h1>
+    <h1 style="color: red;">被添加</h1>
 </header>
 </body>
 </html>
